--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="Academic Free License v3.0"
 [[mods]]
 modId="adding_lard_"
 version="1.0.0"
-displayName="adding lard "
+displayName="the best mod ever"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
 displayURL="https://mcreator.net"
 authors="colem, MCreator"
