--- a/src/main/resources/data/adding_lard_/forge/biome_modifier/skeletonknight_biome_modifier.json
+++ b/src/main/resources/data/adding_lard_/forge/biome_modifier/skeletonknight_biome_modifier.json
@@ -1,11 +1,9 @@
 {
   "type": "forge:add_spawns",
-  "biomes": {
-    "type": "forge:any"
-  },
+  "biomes": "adding_lard_:skeletonbiome",
   "spawners": {
     "type": "adding_lard_:skeletonknight",
-    "weight": 20,
+    "weight": 40,
     "minCount": 4,
     "maxCount": 4
   }
